# Circuit-Calculator

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.bat  main.cpp  run.bat
src/: main.cpp
